Fixed some deprecated Java code style on this old code. new Integer(...) => Integer.valueOf(...)