@@ -109,7 +109,7 @@ public class ElementaryCyclesSearch {
 	 */
 	private boolean findCycles(int v, int s, Vector[] adjList) {
 		boolean f = false;
-		this.stack.add(new Integer(v));
+		this.stack.add(Integer.valueOf(v));
 		this.blocked[v] = true;
 
 		for (int i = 0; i < adjList[v].size(); i++) {
@@ -135,13 +135,13 @@ public class ElementaryCyclesSearch {
 		} else {
 			for (int i = 0; i < adjList[v].size(); i++) {
 				int w = ((Integer) adjList[v].get(i)).intValue();
-				if (!this.B[w].contains(new Integer(v))) {
-					this.B[w].add(new Integer(v));
+				if (!this.B[w].contains(Integer.valueOf(v))) {
+					this.B[w].add(Integer.valueOf(v));
 				}
 			}
 		}
 
-		this.stack.remove(new Integer(v));
+		this.stack.remove(Integer.valueOf(v));
 		return f;
 	}
 
